debug codes (printfs) have been removed

--- a/cmd/smyrna/smyrna.vcproj
+++ b/cmd/smyrna/smyrna.vcproj
@@ -326,6 +326,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\drawxdot.c"
+				>
+			</File>
+			<File
 				RelativePath=".\filter.c"
 				>
 			</File>
