--- a/plugin.demo/xgtk/.cvsignore
+++ b/plugin.demo/xgtk/.cvsignore
@@ -6,8 +6,8 @@ autom4te.cache
 config
 config.*
 configure
-gtk-plugin-*.tar.gz
-libltdl
+xgtk-plugin-*.tar.gz
+xgtk-plugin.spec
 libtool
 m4
 stamp-h1
