--- a/plugin.demo/xgtk/xgtk-plugin.spec.in
+++ b/plugin.demo/xgtk/xgtk-plugin.spec.in
@@ -19,9 +19,6 @@ Source0: http://www.graphviz.org/pub/@GRAPHVIZ_SOURCES@/xgtk-plugin-@VERSION@.ta
 BuildRoot:     %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 BuildRequires: graphviz-devel gtk2-devel
 
-Requires(post):   /sbin/ldconfig
-Requires(postun): /sbin/ldconfig
-
 %description
 A graphviz plugin providind a gtk UI to graphviz.  
 
@@ -44,6 +41,7 @@ fi
 %doc AUTHORS COPYING ChangeLog NEWS README
 %dir %{_libdir}/graphviz
 %{_libdir}/graphviz/*.so.*
+%exclude %{_libdir}/graphviz/*.so
 
 #-- building --------------------------------------------------
 
@@ -65,19 +63,12 @@ CFLAGS="$RPM_OPT_FLAGS" \
         --mandir=%{_mandir} \
         --with-x \
 	--disable-static \
-        --disable-dependency-tracking \
+        --disable-dependency-tracking
 make %{?_smp_mflags}
 
 %install
-rm -rf %{buildroot} __doc
-make DESTDIR=%{buildroot} \
-        docdir=%{buildroot}%{_docdir}/%{name} \
-        pkgconfigdir=%{_libdir}/pkgconfig \
-        install
+make DESTDIR=%{buildroot} install
 find %{buildroot} -type f -name "*.la" -exec rm -f {} ';'
-chmod -x %{buildroot}%{_datadir}/%{name}/lefty/*
-cp -a %{buildroot}%{_datadir}/%{name}/doc __doc
-rm -rf %{buildroot}%{_datadir}/%{name}/doc
 
 %check
 %ifnarch ppc64 ppc
