--- a/plugin.demo/xgtk/xgtk-plugin.spec.in
+++ b/plugin.demo/xgtk/xgtk-plugin.spec.in
@@ -16,8 +16,14 @@ License: CPL
 URL:     http://www.graphviz.org/
 Source0: http://www.graphviz.org/pub/@GRAPHVIZ_SOURCES@/xgtk-plugin-@VERSION@.tar.gz
 
+# graphviz is relocatable - Caution: this feature is used in AT&T,
+#   but probably will not be supported in Redhat/Fedora/Centos distros
+Prefix: /usr
+
 BuildRoot:     %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 BuildRequires: graphviz-devel gtk2-devel
+
+Requires: graphviz gtk2
 
 %description
 A graphviz plugin providind a gtk UI to graphviz.  
@@ -25,16 +31,14 @@ A graphviz plugin providind a gtk UI to graphviz.
 # run "dot -c" to generate plugin config in %{libdir}/graphviz/config
 # (don't rely on ldconfig to find libraries since it won't
 #  help if --prefix was used to relocate binaries)
+# we want errors if "dot -c" in post fails
 %post
 LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c
-/sbin/ldconfig
 
-# if there is no dot after everything else is done, then remove config
+# don't care so much about uninstall errors if "dot -c" in post fails
+#   - in fact, dot may have been uninstalled before this package
 %postun
-if [ $1 -eq 0 ]; then
-        rm -f $RPM_INSTALL_PREFIX0/%{_lib}/graphviz/config || :
-fi
-/sbin/ldconfig
+[ -x $RPM_INSTALL_PREFIX0/bin/dot ] && LD_LIBRARY_PATH=$RPM_INSTALL_PREFIX0/%{_lib} $RPM_INSTALL_PREFIX0/bin/dot -c || :
 
 %files
 %defattr(-,root,root,-)
