--- a/lib/xdot/libxdot.pc.in
+++ b/lib/xdot/libxdot.pc.in
@@ -6,5 +6,5 @@ includedir=@includedir@/@PACKAGE@
 Name: libxdot
 Description: Library for parsing graphs in xdot format
 Version: @VERSION@
-Libs: -L${libdir} -lxdot -lcgraph
+Libs: -L${libdir} -lxdot
 Cflags: -I${includedir}
