libgvc depends on libxdot being built first

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -3,7 +3,7 @@
 
 SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
 	vpsc rbtree ortho sparse patchwork expr common \
-	pack gvc xdot ingraphs topfish glcomp \
+	pack xdot gvc ingraphs topfish glcomp \
 	circogen dotgen fdpgen neatogen twopigen sfdpgen osage gvpr
 
 EXTRA_DIST = Makefile.old gvc.vcproj gvc.def
