--- a/cmd/smyrna/smyrna.vcproj
+++ b/cmd/smyrna/smyrna.vcproj
@@ -306,6 +306,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\arcball.c"
+				>
+			</File>
+			<File
 				RelativePath=".\gui\beacon.c"
 				>
 			</File>
