add check for fcntl.h

--- a/configure.ac
+++ b/configure.ac
@@ -364,7 +364,7 @@ dnl Checks for header files
 
 # AC_HEADER_STDC
 AC_CHECK_HEADERS(stdarg.h stddef.h stddef.h stdlib.h stdint.h malloc.h \
-	search.h getopt.h pthread.h values.h float.h limits.h termios.h \
+	fcntl.h search.h getopt.h pthread.h values.h float.h limits.h termios.h \
 	errno.h time.h unistd.h fenv.h string.h strings.h inttypes.h setjmp.h \
 	sys/time.h sys/times.h sys/types.h sys/select.h fpu_control.h \
 	sys/fpu.h sys/socket.h sys/stat.h sys/mman.h \
