double check for -lperl

--- a/configure.ac
+++ b/configure.ac
@@ -965,6 +965,10 @@ else
             use_perl="No (missing header)"
   	    PERL=
           ])
+          AC_CHECK_LIB(perl,main,,[
+            use_perl="No (missing library)"
+            PERL=
+          ])
 	  CPPFLAGS=$save_CPPFLAGS
 	fi
         if test "x$PERL" != "x"; then
