attribute management beta

--- a/cmd/smyrna/smyrna.vcproj
+++ b/cmd/smyrna/smyrna.vcproj
@@ -346,6 +346,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\gui\frmobjectui.c"
+				>
+			</File>
+			<File
 				RelativePath=".\gui\glcompui.c"
 				>
 			</File>
