--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -7,10 +7,10 @@ AM_CPPFLAGS = \
         -I$(top_srcdir)/lib/utilities \
         -I$(top_srcdir)/lib/xdot \
         -I$(top_srcdir)/lib/glcomp \
+        -I$(top_srcdir)/lib/neatogen \
         -I$(top_srcdir)/lib/topfish \
         -I$(top_srcdir)/lib/gvpr \
         -I$(top_srcdir)/lib/common \
-        -I$(top_srcdir)/lib/neatogen \
         -I$(top_srcdir)/cmd/smyrna/gui \
 	$(GTK_CFLAGS) $(GLUT_CFLAGS) $(GTKGLEXT_CFLAGS) $(GLADE_CFLAGS) $(FREETYPE2_CFLAGS) $(FONTCONFIG_CFLAGS) $(GTS_CFLAGS)
 
@@ -27,17 +27,18 @@ endif
 noinst_HEADERS = btree.h draw.h filter.h glexpose.h glmotion.h gltemplate.h \
 	hier.h materials.h selection.h smyrnadefs.h support.h topview.h \
 	topviewdata.h topviewdefs.h trackball.h tvnodes.h viewport.h \
-	topfisheyeview.h viewportcamera.h gvprpipe.h \
-	gui/callbacks.h gui/datalistcallbacks.h gui/filterscallbacks.h \
-	gui/glmenu.h gui/gui.h gui/menucallbacks.h gui/toolboxcallbacks.h md5.h \
-	gui/topviewsettings.h gui/beacon.h drawxdot.h arcball.h gui/glcompui.h
+	topfisheyeview.h viewportcamera.h gvprpipe.h md5.h drawxdot.h arcball.h \
+	gui/beacon.h gui/callbacks.h gui/datalistcallbacks.h gui/filterscallbacks.h \
+	gui/frmobjectui.h gui/glcompui.h gui/glmenu.h gui/gui.h gui/menucallbacks.h \
+	gui/toolboxcallbacks.h gui/topviewsettings.h
 
 smyrna_SOURCES = btree.c draw.c filter.c glexpose.c glmotion.c gltemplate.c \
 	hier.c main.c selection.c support.c template.c topview.c topviewdata.c \
 	topfisheyeview.c trackball.c tvnodes.c viewport.c viewportcamera.c \
-    gvprpipe.c gui/beacon.c gui/callbacks.c gui/datalistcallbacks.c \
-    gui/filterscallbacks.c gui/glmenu.c gui/gui.c gui/menucallbacks.c \
-    gui/toolboxcallbacks.c gui/topviewsettings.c md5.c drawxdot.c arcball.c gui/glcompui.c
+	gvprpipe.c md5.c drawxdot.c arcball.c \
+	gui/beacon.c gui/callbacks.c gui/datalistcallbacks.c gui/filterscallbacks.c \
+	gui/frmobjectui.c gui/glcompui.c gui/glmenu.c gui/gui.c gui/menucallbacks.c \
+	gui/toolboxcallbacks.c gui/topviewsettings.c
 
 smyrna_LDADD = $(top_builddir)/lib/cgraph/libcgraph_C.la \
 		$(top_builddir)/lib/cdt/libcdt_C.la \
