smyrna changes before release No:1

--- a/cmd/smyrna/smyrna.vcproj
+++ b/cmd/smyrna/smyrna.vcproj
@@ -182,6 +182,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\gui\appmouse.h"
+				>
+			</File>
+			<File
 				RelativePath=".\gui\beacon.h"
 				>
 			</File>
@@ -309,6 +313,10 @@
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
+			<File
+				RelativePath=".\gui\appmouse.c"
+				>
+			</File>
 			<File
 				RelativePath=".\arcball.c"
 				>
