--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -7,6 +7,8 @@ AM_CPPFLAGS = \
         -I$(top_srcdir)/lib/utilities \
         -I$(top_srcdir)/lib/xdot \
         -I$(top_srcdir)/lib/glcomp \
+        -I$(top_srcdir)/lib/ast \
+        -I$(top_srcdir)/lib/sfio \
         -I$(top_srcdir)/lib/neatogen \
         -I$(top_srcdir)/lib/topfish \
         -I$(top_srcdir)/lib/gvpr \
