Re-add sdlshapes.jpg to file list; replace sdlshapes.png with non-zero version I guess at some time we could pick one but the png version keeps disappearing.

--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -24,7 +24,7 @@ html_DATA = attrs.html colors.html command.html \
   invtriangle.gif mrecord.gif nohead.gif none.gif note.gif octagon.gif \
   parallelogram.gif pentagon.gif plaintext.gif point.gif polygon.gif \
   record.gif record2.gif rect.gif rectangle.gif round.gif septagon.gif tab.gif \
-  trapezium.gif triangle.gif tripleoctagon.gif sdlshapes.png \
+  trapezium.gif triangle.gif tripleoctagon.gif sdlshapes.jpg sdlshapes.png \
   html2.gv html3.gv html4.gv plugins.png
 
 EXTRA_DIST = $(html_DATA)
